Bug 165852 - Left/Right alignment with 'Mirror on even pages' option in Page Number Wizard results with opposite positon
Summary: Left/Right alignment with 'Mirror on even pages' option in Page Number Wizard...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.2 target:25...
Keywords:
Depends on:
Blocks: Writer-Styles-Page-Odd-Even
  Show dependency treegraph
 
Reported: 2025-03-21 13:07 UTC by Piotr Osada
Modified: 2025-12-29 13:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document (15.98 KB, application/vnd.oasis.opendocument.text)
2025-03-21 13:12 UTC, Piotr Osada
Details
Page number placed opposite side than expected (1.45 MB, video/mp4)
2025-03-21 13:14 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Osada 2025-03-21 13:07:56 UTC
Steps
1) Insert -> Page Number...
2) Alignment -> Left ([enabled] 'Mirror on even pages')


Result
Page number is placed on right side (opposite than expected).


Expected result
Page number should be on the LEFT side.


Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1d8ff7bd62249ad0f825eaca18ea524d9d7c6c2e
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
Comment 1 Piotr Osada 2025-03-21 13:12:24 UTC
Created attachment 199942 [details]
Example document
Comment 2 Piotr Osada 2025-03-21 13:14:17 UTC
Created attachment 199943 [details]
Page number placed opposite side than expected

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1d8ff7bd62249ad0f825eaca18ea524d9d7c6c2e
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded

gerrit.libreoffice.org/gitweb?p=core.git;a=log;h=1d8ff7bd62249ad0f825eaca18ea524d9d7c6c2e

https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/2025-03-20_02.27.47/
Comment 3 mikhail.machine 2025-03-22 17:11:36 UTC
Hello,

Thank you for reporting the bug. Can you see if bug Bug 105753 is similar to your problem so that I can mark your report as a duplicate of it? (Later bugs are generally marked as duplicates of earlier bugs).
Comment 4 Piotr Osada 2025-03-23 16:39:57 UTC
I believe that this bug is different from bug 105753. Because this bug is about text in-line alignment relative to page (left, center, right), while the bug 105753 is about objects (frames, graphics, formulas) anchoring alignment relative to ?margins? and also considering Book Layout ('Book view' page ordering).


╔══════════════════════╦═════════════╗
║ Bug                  ║ Parameters  ║
╠══════════════════════╬═════════════╣
║ Bug 105753 comment 5 ║    Object   ║
║                      ║  ANCHORING  ║
║                      ║             ║
║                      ║    Inside   ║
║                      ║   Outside   ║
║                      ║    Center   ║
║                      ║ From inside ║
╠══════════════════════╬═════════════╣
║ Bug 165852           ║     Text    ║
║                      ║  ALIGNMENT  ║
║                      ║             ║
║                      ║     Left    ║
║                      ║    Center   ║
║                      ║    Right    ║
╚══════════════════════╩═════════════╝
https://www.tablesgenerator.com/text_tables
Comment 5 Andrew Kopf 2025-06-01 20:09:45 UTC
Hello Piotr Osada,

Thank you for reporting the bug. I can confirm that the bug is present in master.


Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 19f3b72f34c487dc97d582712d21734a7e055fd5
CPU threads: 22; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 Justin L 2025-09-01 19:32:11 UTC
The page number wizard was added in LO 7.6 for bug 86630. At that time, mirrored left/right was working. (tested with the provided Section-Page-count.odt.)

This broke in 25.2 with commit 0c6599ca14ff4ff63224a7e34e93eb30e1ce2adc
Author: Noel Grandin on Mon Aug 5 12:56:10 2024 +0200
    simplify bookmark name calculation
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171566

Sadly, QA failed to bibisect when they confirmed...
Comment 7 Commit Notification 2025-09-02 01:34:55 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e16da933cdfe52382274bb9493bcaa12f85d6426

tdf#165852 Revert "simplify bookmark name calculation"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-09-02 06:14:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d94e5209fb8b429b1424ac37602538ba2de6ab2a

tdf#165852 Revert "simplify bookmark name calculation"

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-09-03 19:40:30 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5dc309ffa947d8eb79ac7392f9fbd79a78f5bc2e

tdf#165852 Revert "simplify bookmark name calculation"

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-09-12 14:47:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/745bd97e9f07cb3ad2aeb8ac0124a45d83ab7c85

tdf#165852: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Alfred Norwood 2025-12-29 09:08:25 UTC Comment hidden (spam)