tdf#165852 Revert "simplify bookmark name calculation"

This reverts 25.2 commit 0c6599ca14ff4ff63224a7e34e93eb30e1ce2adc,
and commit bcf4b998741da342d8612dfa2ac8b9d5d95269d4.

because rSh.SetCursorInHdFt can move to a different page/footer
and thus rSh.GetVirtPageNum() will change value
on even and odd footers.

Change-Id: I2d29e5c9f7538c47c6e11c8e7432f5f8d880bf72
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190507
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit e16da933cdfe52382274bb9493bcaa12f85d6426)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190508
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190526
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>